# serializer version: 1
# name: test_agent_delete_backup
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_agents_info
  dict({
    'id': 1,
    'result': dict({
      'agents': list([
        dict({
          'agent_id': 'backup.local',
        }),
        dict({
          'agent_id': 'domain.test',
        }),
      ]),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_backup_end[with_hassio-hass_access_token]
  dict({
    'error': dict({
      'code': 'only_supervisor',
      'message': 'Only allowed as Supervisor',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_end[with_hassio-hass_supervisor_access_token]
  dict({
    'id': 1,
    'result': None,
    'success': True,
    'type': 'result',
  })
# ---
# name: test_backup_end[without_hassio-hass_access_token]
  dict({
    'error': dict({
      'code': 'unknown_command',
      'message': 'Unknown command.',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_end[without_hassio-hass_supervisor_access_token]
  dict({
    'error': dict({
      'code': 'unknown_command',
      'message': 'Unknown command.',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_end_exception[exception0]
  dict({
    'error': dict({
      'code': 'post_backup_actions_failed',
      'message': '',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_end_exception[exception1]
  dict({
    'error': dict({
      'code': 'post_backup_actions_failed',
      'message': 'Boom',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_end_exception[exception2]
  dict({
    'error': dict({
      'code': 'post_backup_actions_failed',
      'message': 'Boom',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_start[with_hassio-hass_access_token]
  dict({
    'error': dict({
      'code': 'only_supervisor',
      'message': 'Only allowed as Supervisor',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_start[with_hassio-hass_supervisor_access_token]
  dict({
    'id': 1,
    'result': None,
    'success': True,
    'type': 'result',
  })
# ---
# name: test_backup_start[without_hassio-hass_access_token]
  dict({
    'error': dict({
      'code': 'unknown_command',
      'message': 'Unknown command.',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_start[without_hassio-hass_supervisor_access_token]
  dict({
    'error': dict({
      'code': 'unknown_command',
      'message': 'Unknown command.',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_start_exception[exception0]
  dict({
    'error': dict({
      'code': 'pre_backup_actions_failed',
      'message': '',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_start_exception[exception1]
  dict({
    'error': dict({
      'code': 'pre_backup_actions_failed',
      'message': 'Boom',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_backup_start_exception[exception2]
  dict({
    'error': dict({
      'code': 'pre_backup_actions_failed',
      'message': 'Boom',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_config_info[None]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_info[storage_data1]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': list([
            'test-addon',
          ]),
          'include_all_addons': True,
          'include_database': True,
          'include_folders': list([
            'media',
          ]),
          'name': 'test-name',
          'password': 'test-password',
        }),
        'last_attempted_automatic_backup': '2024-10-26T04:45:00+01:00',
        'last_completed_automatic_backup': '2024-10-26T04:45:00+01:00',
        'retention': dict({
          'copies': 3,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_info[storage_data2]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': False,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': 3,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_info[storage_data3]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': False,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': '2024-10-27T04:45:00+01:00',
        'last_completed_automatic_backup': '2024-10-26T04:45:00+01:00',
        'retention': dict({
          'copies': None,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_info[storage_data4]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': False,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'mon',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_info[storage_data5]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': False,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'sat',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command0]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command0].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command0].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command10]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command10].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command10].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command1]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command1].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command1].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command2]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command2].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'mon',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command2].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'mon',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command3]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command3].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command3].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command4]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command4].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': list([
            'test-addon',
          ]),
          'include_all_addons': False,
          'include_database': True,
          'include_folders': list([
            'media',
          ]),
          'name': 'test-name',
          'password': 'test-password',
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command4].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': list([
            'test-addon',
          ]),
          'include_all_addons': False,
          'include_database': True,
          'include_folders': list([
            'media',
          ]),
          'name': 'test-name',
          'password': 'test-password',
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command5]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command5].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': 3,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command5].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': 3,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command6]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command6].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command6].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command7]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command7].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': 3,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command7].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': 3,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command8]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command8].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command8].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': 7,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update[command9]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command9].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': 3,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update[command9].2
  dict({
    'data': dict({
      'backups': list([
      ]),
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': 3,
          'days': None,
        }),
        'schedule': dict({
          'state': 'daily',
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 1,
    'version': 1,
  })
# ---
# name: test_config_update_errors[command0]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update_errors[command0].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update_errors[command1]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update_errors[command1].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update_errors[command2]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update_errors[command2].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update_errors[command3]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_update_errors[command3].1
  dict({
    'id': 3,
    'result': dict({
      'config': dict({
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'state': 'never',
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents0-backups0]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents0-backups0].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents0-backups0].2
  dict({
    'id': 3,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents1-backups1]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'backup.local',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents1-backups1].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents1-backups1].2
  dict({
    'id': 3,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents2-backups2]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'test.remote',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents2-backups2].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents2-backups2].2
  dict({
    'id': 3,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'test.remote',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents3-backups3]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
          ]),
          'agent_ids': list([
            'test.remote',
          ]),
          'backup_id': 'def456',
          'database_included': False,
          'date': '1980-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test 2',
          'protected': False,
          'size': 1,
          'with_automatic_settings': None,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents3-backups3].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents3-backups3].2
  dict({
    'id': 3,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
          ]),
          'agent_ids': list([
            'test.remote',
          ]),
          'backup_id': 'def456',
          'database_included': False,
          'date': '1980-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test 2',
          'protected': False,
          'size': 1,
          'with_automatic_settings': None,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents4-backups4]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'test.remote',
            'backup.local',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents4-backups4].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete[remote_agents4-backups4].2
  dict({
    'id': 3,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'test.remote',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[BackupAgentUnreachableError-storage_data0]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
        'domain.test': 'The backup agent is unreachable.',
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[BackupAgentUnreachableError-storage_data0].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'domain.test',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 13,
          'with_automatic_settings': None,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[BackupAgentUnreachableError-storage_data1]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
        'domain.test': 'The backup agent is unreachable.',
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[BackupAgentUnreachableError-storage_data1].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'domain.test',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00Z',
          'failed_agent_ids': list([
            'test.remote',
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 13,
          'with_automatic_settings': None,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[None-storage_data0]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[None-storage_data0].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'domain.test',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 13,
          'with_automatic_settings': None,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[None-storage_data1]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[None-storage_data1].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'domain.test',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 13,
          'with_automatic_settings': None,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[side_effect1-storage_data0]
  dict({
    'error': dict({
      'code': 'home_assistant_error',
      'message': 'Boom!',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[side_effect1-storage_data0].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'domain.test',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 13,
          'with_automatic_settings': None,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[side_effect1-storage_data1]
  dict({
    'error': dict({
      'code': 'home_assistant_error',
      'message': 'Boom!',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_delete_with_errors[side_effect1-storage_data1].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'domain.test',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00Z',
          'failed_agent_ids': list([
            'test.remote',
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 13,
          'with_automatic_settings': None,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_details[remote_agents0-backups0]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_details[remote_agents1-backups1]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backup': dict({
        'addons': list([
          dict({
            'name': 'Test',
            'slug': 'test',
            'version': '1.0.0',
          }),
        ]),
        'agent_ids': list([
          'backup.local',
        ]),
        'backup_id': 'abc123',
        'database_included': True,
        'date': '1970-01-01T00:00:00.000Z',
        'failed_agent_ids': list([
        ]),
        'folders': list([
          'media',
          'share',
        ]),
        'homeassistant_included': True,
        'homeassistant_version': '2024.12.0',
        'name': 'Test',
        'protected': False,
        'size': 0,
        'with_automatic_settings': True,
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_details[remote_agents2-backups2]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backup': dict({
        'addons': list([
          dict({
            'name': 'Test',
            'slug': 'test',
            'version': '1.0.0',
          }),
        ]),
        'agent_ids': list([
          'test.remote',
        ]),
        'backup_id': 'abc123',
        'database_included': True,
        'date': '1970-01-01T00:00:00.000Z',
        'failed_agent_ids': list([
        ]),
        'folders': list([
          'media',
          'share',
        ]),
        'homeassistant_included': True,
        'homeassistant_version': '2024.12.0',
        'name': 'Test',
        'protected': False,
        'size': 0,
        'with_automatic_settings': True,
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_details[remote_agents3-backups3]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_details[remote_agents4-backups4]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backup': dict({
        'addons': list([
          dict({
            'name': 'Test',
            'slug': 'test',
            'version': '1.0.0',
          }),
        ]),
        'agent_ids': list([
          'test.remote',
          'backup.local',
        ]),
        'backup_id': 'abc123',
        'database_included': True,
        'date': '1970-01-01T00:00:00.000Z',
        'failed_agent_ids': list([
        ]),
        'folders': list([
          'media',
          'share',
        ]),
        'homeassistant_included': True,
        'homeassistant_version': '2024.12.0',
        'name': 'Test',
        'protected': False,
        'size': 0,
        'with_automatic_settings': True,
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_details_with_errors[BackupAgentUnreachableError]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
        'domain.test': 'The backup agent is unreachable.',
      }),
      'backup': dict({
        'addons': list([
          dict({
            'name': 'Test',
            'slug': 'test',
            'version': '1.0.0',
          }),
        ]),
        'agent_ids': list([
          'backup.local',
        ]),
        'backup_id': 'abc123',
        'database_included': True,
        'date': '1970-01-01T00:00:00.000Z',
        'failed_agent_ids': list([
        ]),
        'folders': list([
          'media',
          'share',
        ]),
        'homeassistant_included': True,
        'homeassistant_version': '2024.12.0',
        'name': 'Test',
        'protected': False,
        'size': 0,
        'with_automatic_settings': True,
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_details_with_errors[side_effect0]
  dict({
    'error': dict({
      'code': 'home_assistant_error',
      'message': 'Boom!',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_generate[None]
  dict({
    'event': dict({
      'manager_state': 'idle',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[None].1
  dict({
    'id': 1,
    'result': None,
    'success': True,
    'type': 'result',
  })
# ---
# name: test_generate[None].2
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': None,
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[None].3
  dict({
    'id': 2,
    'result': dict({
      'backup_job_id': '64331d85',
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_generate[None].4
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': 'home_assistant',
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[None].5
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': 'upload_to_agents',
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[None].6
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': None,
      'state': 'completed',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data1]
  dict({
    'event': dict({
      'manager_state': 'idle',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data1].1
  dict({
    'id': 1,
    'result': None,
    'success': True,
    'type': 'result',
  })
# ---
# name: test_generate[data1].2
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': None,
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data1].3
  dict({
    'id': 2,
    'result': dict({
      'backup_job_id': '64331d85',
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_generate[data1].4
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': 'home_assistant',
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data1].5
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': 'upload_to_agents',
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data1].6
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': None,
      'state': 'completed',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data2]
  dict({
    'event': dict({
      'manager_state': 'idle',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data2].1
  dict({
    'id': 1,
    'result': None,
    'success': True,
    'type': 'result',
  })
# ---
# name: test_generate[data2].2
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': None,
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data2].3
  dict({
    'id': 2,
    'result': dict({
      'backup_job_id': '64331d85',
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_generate[data2].4
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': 'home_assistant',
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data2].5
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': 'upload_to_agents',
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_generate[data2].6
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': None,
      'state': 'completed',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_info[remote_agents0-remote_backups0]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'backup.local',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_info[remote_agents1-remote_backups1]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'backup.local',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_info[remote_agents2-remote_backups2]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'test.remote',
            'backup.local',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_info[remote_agents3-remote_backups3]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
          ]),
          'agent_ids': list([
            'test.remote',
          ]),
          'backup_id': 'def456',
          'database_included': False,
          'date': '1980-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test 2',
          'protected': False,
          'size': 1,
          'with_automatic_settings': None,
        }),
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'backup.local',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_info_with_errors[BackupAgentUnreachableError]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
        'domain.test': 'The backup agent is unreachable.',
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'backup.local',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_info_with_errors[side_effect0]
  dict({
    'error': dict({
      'code': 'home_assistant_error',
      'message': 'Boom!',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_restore_local_agent[backups0]
  dict({
    'error': dict({
      'code': 'home_assistant_error',
      'message': 'Backup abc123 not found in agent backup.local',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_restore_local_agent[backups0].1
  0
# ---
# name: test_restore_local_agent[backups1]
  dict({
    'id': 1,
    'result': None,
    'success': True,
    'type': 'result',
  })
# ---
# name: test_restore_local_agent[backups1].1
  1
# ---
# name: test_restore_remote_agent[remote_agents0-backups0]
  dict({
    'error': dict({
      'code': 'home_assistant_error',
      'message': 'Backup abc123 not found in agent test.remote',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_restore_remote_agent[remote_agents0-backups0].1
  0
# ---
# name: test_restore_remote_agent[remote_agents1-backups1]
  dict({
    'id': 1,
    'result': None,
    'success': True,
    'type': 'result',
  })
# ---
# name: test_restore_remote_agent[remote_agents1-backups1].1
  1
# ---
# name: test_restore_wrong_password
  dict({
    'error': dict({
      'code': 'password_incorrect',
      'message': 'Incorrect password',
    }),
    'id': 1,
    'success': False,
    'type': 'result',
  })
# ---
# name: test_subscribe_event
  dict({
    'event': dict({
      'manager_state': 'idle',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
# name: test_subscribe_event.1
  dict({
    'id': 1,
    'result': None,
    'success': True,
    'type': 'result',
  })
# ---
# name: test_subscribe_event.2
  dict({
    'event': dict({
      'manager_state': 'create_backup',
      'stage': None,
      'state': 'in_progress',
    }),
    'id': 1,
    'type': 'event',
  })
# ---
